--- a/app/src/index.html
+++ b/app/src/index.html
@@ -210,17 +210,17 @@
         </span>
       </div>
     </div>
-    <div id="template-pant" class="template template--common">
+    <div id="template-pant" class="template template--common template--pant">
       <img data-info="file" class="template__image">
       <div class="template__info">
         <div class="info info--left">
           <div data-info="pant-size-box" class="info__data">
-            <span class="size__title">TALLA:</span>
-            <span data-info="pant-size-value" class="size__value"></span>
+            <span class="data__title">TALLA:</span>
+            <span data-info="pant-size-value" class="data__value"></span>
           </div>
           <div data-info="pant-court-box" class="info__data">
-            <span class="size__title">CORTE:</span>
-            <span data-info="pant-court-value" class="size__value"></span>
+            <span class="data__title">CORTE:</span>
+            <span data-info="pant-court-value" class="data__value"></span>
           </div>
           <div data-info="pant-color-box" class="info__data">
             <span class="data__title">COLOR:</span>
@@ -284,7 +284,7 @@
   </section>
 
   <footer class="text-center text-secondary" style="margin: 64px 0;">
-    <small>v1.1.0</small>
+    <small>v1.6.0</small>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
